--- a/LASO/main.css
+++ b/LASO/main.css
@@ -232,7 +232,7 @@ body .displayPhone {
     display: block;
     float: left;
     width: 5em;
-    padding: 12px 0;
+    padding: 10px 16px;
     text-decoration: none;
 }
 
@@ -325,7 +325,7 @@ body .displayPhone {
 
     body .header li a {
         padding: 22px 0.8vw; 
-        font-size: clamp(0.8em, 1.06vw, 1.2em);
+        font-size: clamp(1.08em, 1.2vw, 1.2em);
 
     }
 
@@ -341,7 +341,7 @@ body .displayPhone {
    body .BtnsBox4Header{
         display: flex;
         flex-direction: row;
-        padding: 22px auto; 
+        padding: 18px auto; 
 
     }
 
